[gd_scene load_steps=10 format=3 uid="uid://bcmp0up0s12kn"]

[ext_resource type="Script" uid="uid://c45hyxvh3e21i" path="res://Script/ParallaxBackground.gd" id="1_cbwwl"]
[ext_resource type="Texture2D" uid="uid://k4ot52o4rq66" path="res://Asset/parallax background/plx-1.png" id="2_lki5j"]
[ext_resource type="Texture2D" uid="uid://c6ojdtp6sl7of" path="res://Asset/parallax background/plx-2.png" id="3_y1prs"]
[ext_resource type="Texture2D" uid="uid://bmslvodpinybx" path="res://Asset/parallax background/plx-3.png" id="4_4hcmw"]
[ext_resource type="Texture2D" uid="uid://qq4hkvbsdeqm" path="res://Asset/parallax background/plx-4.png" id="5_jkh0l"]
[ext_resource type="Texture2D" uid="uid://cugdcqkndv1" path="res://Asset/parallax background/plx-5.png" id="6_omch5"]
[ext_resource type="Script" uid="uid://ear0x302hrt0" path="res://Script/Player_selection.gd" id="7_0pd38"]
[ext_resource type="Theme" uid="uid://c5mk51k51gcl3" path="res://Themes/button_theme.tres" id="7_gcd44"]
[ext_resource type="AudioStream" uid="uid://ddghtajwx7ybk" path="res://Asset/SFX/click.wav" id="10_kxjom"]

[node name="Player_Selection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("1_cbwwl")

[node name="ParallaxLayer1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1280, 0)

[node name="Plx-1" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer1"]
position = Vector2(640, 358)
scale = Vector2(3.33333, 3.35185)
texture = ExtResource("2_lki5j")

[node name="Plx-2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer1"]
position = Vector2(640, 360)
scale = Vector2(3.33333, 3.33333)
texture = ExtResource("3_y1prs")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(2, 2)
motion_mirroring = Vector2(1280, 0)

[node name="Plx-3" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(640, 361)
scale = Vector2(3.33333, 3.32407)
texture = ExtResource("4_4hcmw")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(2, 2)
motion_mirroring = Vector2(1280, 0)

[node name="Plx-4" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(640, 360)
scale = Vector2(3.33333, 3.33333)
texture = ExtResource("5_jkh0l")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(4, 4)
motion_mirroring = Vector2(1280, 0)

[node name="Plx-5" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(640, 360)
scale = Vector2(3.33333, 3.33333)
texture = ExtResource("6_omch5")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -220.5
offset_right = 280.0
offset_bottom = 220.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 185
script = ExtResource("7_0pd38")

[node name="Player1" type="BoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1
vertical = true

[node name="Panel" type="Panel" parent="HBoxContainer/Player1"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2

[node name="Player1_name" type="LineEdit" parent="HBoxContainer/Player1"]
layout_mode = 2
text = "Player1"
placeholder_text = "Enter name"
max_length = 18

[node name="Player1_type" type="OptionButton" parent="HBoxContainer/Player1"]
layout_mode = 2
theme = ExtResource("7_gcd44")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
alignment = 1
icon_alignment = 1
item_count = 3
selected = 0
popup/item_0/text = "Warrior"
popup/item_0/id = 0
popup/item_1/text = "Speedster"
popup/item_1/id = 1
popup/item_2/text = "Tank"
popup/item_2/id = 2

[node name="Start_Menu" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Start Game" type="Button" parent="HBoxContainer/Start_Menu"]
layout_mode = 2
theme = ExtResource("7_gcd44")
text = "  Start Game  "

[node name="Level_Selection" type="OptionButton" parent="HBoxContainer/Start_Menu"]
layout_mode = 2
theme = ExtResource("7_gcd44")
alignment = 1
item_count = 4
selected = 0
popup/item_0/text = "Map1"
popup/item_0/id = 0
popup/item_1/text = "Map2"
popup/item_1/id = 1
popup/item_2/text = "Map3"
popup/item_2/id = 2
popup/item_3/text = "Map4"
popup/item_3/id = 3

[node name="CheckBox" type="CheckBox" parent="HBoxContainer/Start_Menu"]
layout_mode = 2
theme = ExtResource("7_gcd44")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 21
button_pressed = true
text = " Genrate Food"
flat = true

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Start_Menu"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 12

[node name="Back" type="Button" parent="HBoxContainer/Start_Menu"]
layout_mode = 2
theme = ExtResource("7_gcd44")
text = "Back"

[node name="Player2" type="BoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1
vertical = true

[node name="Panel" type="Panel" parent="HBoxContainer/Player2"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2

[node name="Player2_name" type="LineEdit" parent="HBoxContainer/Player2"]
layout_mode = 2
text = "Player2"
placeholder_text = "Enter name"
max_length = 18

[node name="Player2_type" type="OptionButton" parent="HBoxContainer/Player2"]
layout_mode = 2
theme = ExtResource("7_gcd44")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
button_mask = 3
alignment = 1
icon_alignment = 1
item_count = 3
selected = 0
popup/item_0/text = "Warrior"
popup/item_0/id = 0
popup/item_1/text = "Speedster"
popup/item_1/id = 1
popup/item_2/text = "Tank"
popup/item_2/id = 2

[node name="click_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_kxjom")
volume_db = -14.0
autoplay = true

[connection signal="item_selected" from="HBoxContainer/Player1/Player1_type" to="HBoxContainer" method="_on_player_1_type_item_selected"]
[connection signal="pressed" from="HBoxContainer/Start_Menu/Start Game" to="HBoxContainer" method="_on_start_game_pressed"]
[connection signal="item_selected" from="HBoxContainer/Start_Menu/Level_Selection" to="HBoxContainer" method="_on_level_selection_item_selected"]
[connection signal="toggled" from="HBoxContainer/Start_Menu/CheckBox" to="HBoxContainer" method="_on_check_box_toggled"]
[connection signal="pressed" from="HBoxContainer/Start_Menu/Back" to="HBoxContainer" method="_on_back_pressed"]
[connection signal="item_selected" from="HBoxContainer/Player2/Player2_type" to="HBoxContainer" method="_on_player_2_type_item_selected"]
